# co-task

./: .gitmodules  CMakeLists.txt  CODEOWNERS  LICENSE  README.md
include/cotask/: any_task.hpp  async_awaitable.hpp  awaitable.hpp  basic_awaitable.hpp  cotask.hpp  cotask_context.hpp  cotask_exception.hpp  execution_guard.hpp  generate_task_awaitable.hpp  lock_awaitable.hpp  operation_context.hpp  task.hpp  task_awaitable.hpp  this_thread.hpp
src/: cotask_context.cpp  execution_guard.cpp  operation_context.cpp
tests/: CMakeLists.txt  tests.cpp
